Added super secret things

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,9 @@ site_name: My Docs
 theme:
   name: material
 
+markdown_extensions:
+  - attr_list
+
 nav:
   - Home: index.md
   - Octopus: special-octo-waffle.md
